[gd_scene load_steps=2 format=3 uid="uid://coreloop123"]

[ext_resource type="Script" uid="uid://blfotvsb4rsdb" path="res://tests/CoreLoop_Isolated.gd" id="1_coreloop"]

[node name="CoreLoop_Isolated" type="Node2D"]
script = ExtResource("1_coreloop")

[node name="Player" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]

[node name="Sprite2D" type="Sprite2D" parent="Player"]

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoLabel" type="Label" parent="UILayer/HUD"]
layout_mode = 0
anchor_right = 0.5
anchor_bottom = 0.5
text = "Core Loop Test
WASD: Move player
P: Pause/Resume
Mouse Wheel: Zoom camera
ESC: Exit test"

[node name="PauseOverlay" type="ColorRect" parent="UILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)
